--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="tagcanvas.min.js" type="text/javascript"></script>
+    <script src="/src/tagcanvas.min.js" type="text/javascript"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
