--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div id="root"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="/src/tagcanvas.min.js" type="text/javascript"></script>
+    <script
+      src="https://res.cloudinary.com/dhiu02sfh/raw/upload/v1666616025/TagCanvas/tagcanvas.min_nmr2mv.js"
+      type="text/javascript"
+    ></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
